TASK-2 some fixes